Include posts folder

--- a/_config.yml
+++ b/_config.yml
@@ -109,7 +109,7 @@ markdown: kramdown
 #sass:
 #  style: compressed
 exclude: ['site.bat','compose.rb','README.md']
-include: ['_pages','.htaccess']
+include: ['_pages','_posts','.htaccess']
 defaults:
   - scope:
       path: _pages
